# ai-chat-platform

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_deepseek_tools.py  test_thinking.py
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  files.py  research.py  research_async.py  sessions.py  speech.py  traces.py  users.py
backend/app/core/: config.py  database.py  huey_app.py  logging.py  security.py
backend/app/models/: __init__.py  model_trace.py  models.py  research.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: agent_service.py  ai_service.py  chat_service.py  chat_task_service.py  deep_research_graph.py  deep_research_prompts.py  deep_research_service.py  deer_flow_service.py  doubao_asr_service.py  otel_mongodb_exporter.py  research_graph_checkpoint.py  sandbox_service.py  search_service.py  title_service.py  trace_service.py
backend/app/services/deer_flow/: __init__.py  middleware_chain.py  orchestrator.py  state.py  sub_agent.py
backend/app/services/deer_flow/middleware/: __init__.py  base.py  clarify.py  evaluate.py  plan.py  search.py  synthesize.py
backend/app/tasks/: __init__.py  research_tasks.py
backend/scripts/: setup_agent.bat
backend/tests/: conftest.py  test_agent.py  test_agent_api.py  test_agent_search.py  test_agent_service_full.py  test_auth.py  test_chat.py  test_chat_task.py  test_multimodal.py  test_research_async_api.py  test_research_checkpoint.py  test_research_models.py  test_sandbox_service.py  test_sessions.py  test_users.py
backend/tests/integration/: test_api.py  test_cors.py
backend/tests/unit/: test_security.py
design/: UI-Design-System.md  ud-design-issue.md
docs/: PRD.md  Testing-Strategy.md  agent-guide.md  voice-input.md
docs/deployment/: vercel-deployment-plan.md
frontend/: README.md  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/traces/: page.tsx
frontend/components/chat/: ChatContainer.tsx  DeepSeekStartPage.tsx  InputArea.tsx  IterationsDisplay.tsx  MessageBubble.tsx  MessageBubbleEnhanced.tsx  MessageList.tsx  ModelSelector.tsx  SearchIndicator.tsx  SearchResultsPreview.tsx  SourceDisplay.tsx  ThinkingBlock.tsx  VoiceInput.tsx  index.ts
frontend/components/layout/: ChatLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
frontend/components/research/: AsyncResearchProgress.tsx  ResearchProgress.tsx  index.ts
frontend/components/ui/: avatar.tsx  button.tsx  card.tsx  index.ts  input.tsx  modal.tsx  skeleton.tsx  toast.tsx
frontend/examples/: agent-chat-example.ts
frontend/lib/: utils.ts
frontend/services/: apiClient.ts  authService.ts  chatService.ts  index.ts  researchService.ts  researchTaskService.ts  sessionService.ts  traceService.ts
frontend/stores/: authStore.ts  chatStore.ts  sessionStore.ts
frontend/tests/e2e/: agent-search-simple.spec.ts  agent-search.spec.ts  agent-toggle.spec.ts  chat-flow.spec.ts  chat.spec.ts  core-flow.spec.ts  deep-research-full-flow.spec.ts  deep-research-full-flow.test.ts  deep-research.spec.ts  deep-thinking.spec.ts  expert-mode-full-flow.test.ts  simple.spec.ts  (+3 more)
frontend/types/: index.ts
tech/: Architecture-and-Deployment.md  Backend-Tech-Solution.md  Frontend-Tech-Solution.md
(+3 files in other folders)
