[project]
name = "ai-chat-backend"
version = "1.0.0"
description = "AI Chat Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and ASGI
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sse-starlette==2.1.0",
    "python-multipart==0.0.9",

    # Database - MongoDB
    "motor==3.6.0",
    "beanie==1.28.0",

    # Database - SQLite (for Huey task queue only)
    "aiosqlite==0.20.0",

    # Task Queue
    "huey==2.5.2",

    # Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",  # Lock to compatible version (5.0.0 breaks passlib)
    "python-dotenv==1.0.1",

    # Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",

    # HTTP Client
    "httpx==0.27.2",
    "aiofiles==24.1.0",

    # AI/ML
    "openai==1.54.0",
    "anthropic==0.38.0",
    "langgraph==0.2.28",
    "langchain==0.3.0",
    "langchain-openai==0.2.0",
    "langchain-core==0.3.0",
    "traceloop-sdk>=0.38.0",

    # Utilities
    "python-dateutil==2.9.0",
    "uuid6==2024.1.12",
    "orjson==3.10.7",

    # Docker SDK (for sandbox)
    "docker==7.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "faker==30.4.0",

    # Development
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "faker==30.4.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"